Fixed css issues regarding to using a confine property.
The 'right' css property is now accounted for when an absolute element becomes fixed.

Fixed bug where elements with padding would get wider as it unstuck due to width calculations not accounting for padding.

Fixed bug where element height was accounted for twice when calculating bottoming out in parent and causing element to stick to bottom of parent before it should.

Fixed issue where element would go past parent bottom due to top and bottom padding.

Changed 'display' css value from being set inline as it would hide itself when unsticking if classes are used to show/hide.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngsticky",
-  "version": "1.8.13",
-  "homepage": "https://github.com/d-oliveros/ngSticky",
+  "version": "1.8.14",
+  "homepage": "https://github.com/nrowan/ngSticky",
   "authors": [
-    "David Oliveros <dato.oliveros@gmail.com>"
+    "Nate Rowan"
   ],
   "description": "A simple, pure javascript (No jQuery required!) AngularJS directive to make elements stick when scrolling down.",
   "main": "lib/sticky.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:d-oliveros/ngSticky.git"
+    "url": "git@github.com:nrowan/ngSticky.git"
   },
   "keywords": [
     "angularjs",
