--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "ngSticky",
-  "version": "1.8.10",
-  "homepage": "https://github.com/d-oliveros/ngSticky",
+  "version": "1.8.14",
+  "homepage": "https://github.com/nrowan/ngSticky",
   "authors": [
     "David Oliveros <dato.oliveros@gmail.com>",
-    "Jimmy Grand <grand.jimmy1@gmail.com>"
+    "Jimmy Grand <grand.jimmy1@gmail.com>",
+    "Nate Rowan"
   ],
   "description": "A simple, pure javascript (No jQuery required!) AngularJS directive to make elements stick when scrolling down.",
   "main": "lib/sticky.js",
