--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
-  "latedef": true,
+  "latedef": "nofunc",
   "newcap": true,
   "nonew": true,
   "freeze": true,
