--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "Nate Rowan"
   ],
   "description": "A simple, pure javascript (No jQuery required!) AngularJS directive to make elements stick when scrolling down.",
-  "main": "lib/sticky.js",
+  "main": "src/sticky.js",
   "dependencies": {
     "angular": "^1.2.0",
     "matchmedia": "~0.2.0"
