--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,7 @@
   "version": "1.8.14",
   "homepage": "https://github.com/nrowan/ngSticky",
   "authors": [
-    "David Oliveros <dato.oliveros@gmail.com>",
-    "Jimmy Grand <grand.jimmy1@gmail.com>",
-    "Nate Rowan"
+    "Nate Rowan <naterowandev@gmail.com>"
   ],
   "description": "A simple, pure javascript (No jQuery required!) AngularJS directive to make elements stick when scrolling down.",
   "main": "lib/sticky.js",
